--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,15 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.12.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
