--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/egen
 spring.datasource.username=root
 spring.datasource.password=admin
+
+server.port=8085
